--- a/scripts/docker-compose-backend-external.yaml
+++ b/scripts/docker-compose-backend-external.yaml
@@ -19,14 +19,14 @@ services:
       - "backend:$KILLRVIDEO_BACKEND"
 
   # Datastax Studio provides convenient web interface to work directly with DataStax Enterprise
-  studio:  
-    image: datastax/dse-studio:6.7.0
-    ports:
-      - "9091:9091" # Exposes port to be available externally
-    depends_on:
-      - dse # Needs DSE to be running
-    environment:
-      DS_LICENSE: accept
+  #studio:
+  #  image: datastax/dse-studio:6.7.0
+  #  ports:
+  #    - "9091:9091" # Exposes port to be available externally
+  #  depends_on:
+  #    - dse # Needs DSE to be running
+  #  environment:
+  #    DS_LICENSE: accept
 
   # DataStax Enterprise Database
   dse: 
@@ -53,10 +53,10 @@ services:
 
   # Sample Data Generator, imitates behaviour of users on the killrVideo website. 
   # Adds comments and rates videos, upload new videos and so on.
-  generator: 
-    image: killrvideo/killrvideo-generator:3.0.1
-    environment:
-      KILLRVIDEO_LOGGING_LEVEL: debug # More logging
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-      - "backend:$KILLRVIDEO_BACKEND"
+  #generator:
+  #  image: killrvideo/killrvideo-generator:3.0.1
+  #  environment:
+  #    KILLRVIDEO_LOGGING_LEVEL: debug # More logging
+  #  extra_hosts:
+  #    - "host.docker.internal:host-gateway"
+  #    - "backend:$KILLRVIDEO_BACKEND"
