--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,8 @@
 		<dse.version>1.8.2</dse.version>
 		
 		<!-- Spring -->
-		<spring.version>5.1.4.RELEASE</spring.version>
-		<spring-boot.version>2.1.1.RELEASE</spring-boot.version>
+		<spring.version>5.3.14</spring.version>
+		<spring-boot.version>2.6.2</spring-boot.version>
 		
    		<!-- Validation -->
         <javax.el.api.version>3.0.0</javax.el.api.version>
