--- a/killrvideo-commons/pom.xml
+++ b/killrvideo-commons/pom.xml
@@ -34,8 +34,8 @@
 		
 		<!-- Java driver for DSE -->
 		<dependency>
-			<groupId>com.datastax.dse</groupId>
-			<artifactId>dse-java-driver-core</artifactId>
+			<groupId>com.datastax.oss</groupId>
+			<artifactId>java-driver-core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.datastax.dse</groupId>
