--- a/pom.xml
+++ b/pom.xml
@@ -108,9 +108,9 @@
 
 			<!-- Java driver for DSE -->
 			<dependency>
-				<groupId>com.datastax.dse</groupId>
-				<artifactId>dse-java-driver-core</artifactId>
-				<version>${dse.version}</version>
+				<groupId>com.datastax.oss</groupId>
+				<artifactId>java-driver-core</artifactId>
+				<version>4.4.0</version>
 			</dependency>
 			<dependency>
 				<groupId>com.datastax.dse</groupId>
