--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,16 @@
 				<artifactId>dse-java-driver-graph</artifactId>
 				<version>${dse.version}</version>
 			</dependency>
-	 		
+			<dependency>
+				<groupId>com.datastax.oss</groupId>
+				<artifactId>java-driver-mapper-runtime</artifactId>
+				<version>${datastax-driver.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.datastax.oss</groupId>
+				<artifactId>java-driver-mapper-processor</artifactId>
+				<version>${datastax-driver.version}</version>
+			</dependency>
 	 		<!-- Bean Validation -->
 	        <dependency>
 	            <groupId>javax.validation</groupId>
