remove dse-java-driver-extras dep.

--- a/killrvideo-commons/pom.xml
+++ b/killrvideo-commons/pom.xml
@@ -41,22 +41,16 @@
 			<groupId>com.datastax.dse</groupId>
 			<artifactId>dse-java-driver-mapping</artifactId>
 		</dependency>
+		<!--
 		<dependency>
 			<groupId>com.datastax.dse</groupId>
 			<artifactId>dse-java-driver-extras</artifactId>
-		</dependency>
+		</dependency>		-->
 		<dependency>
 			<groupId>com.datastax.dse</groupId>
 			<artifactId>dse-java-driver-graph</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>com.datastax.oss</groupId>
-			<artifactId>java-driver-mapper-runtime</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>com.datastax.oss</groupId>
-			<artifactId>java-driver-mapper-processor</artifactId>
-		</dependency>
+
 		<!--  Service Discovery -->
 		<dependency>
 			<groupId>com.xqbase</groupId>
