--- a/killrvideo-commons/pom.xml
+++ b/killrvideo-commons/pom.xml
@@ -50,7 +50,18 @@
 			<groupId>com.datastax.dse</groupId>
 			<artifactId>dse-java-driver-graph</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>com.datastax.oss</groupId>
+			<artifactId>java-driver-mapper-runtime</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.datastax.oss</groupId>
+			<artifactId>java-driver-mapper-processor</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.datastax.oss</groupId>
+			<artifactId>native-protocol</artifactId>
+		</dependency>
 		<!--  Service Discovery -->
 		<dependency>
 			<groupId>com.xqbase</groupId>
