--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,8 @@
 		
 		<!-- DataStax Java-Driver -->
 		<dse.version>1.9.0</dse.version>
-		<datastax-driver.version>4.4.0</datastax-driver.version>
+		<datastax-driver.version>4.3.0</datastax-driver.version>
+		<cassandra-native-protocol.version>1.4.9</cassandra-native-protocol.version>
 		
 		<!-- Spring -->
 		<spring.version>5.3.14</spring.version>
@@ -139,6 +140,11 @@
 				<groupId>com.datastax.oss</groupId>
 				<artifactId>java-driver-mapper-processor</artifactId>
 				<version>${datastax-driver.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.datastax.oss</groupId>
+				<artifactId>native-protocol</artifactId>
+				<version>${cassandra-native-protocol.version}</version>
 			</dependency>
 	 		<!-- Bean Validation -->
 	        <dependency>
