--- a/killrvideo-service-comments/pom.xml
+++ b/killrvideo-service-comments/pom.xml
@@ -50,6 +50,7 @@
 						</goals>
 						<configuration>
 							<sources>
+								<source>target/generated-sources/annotations</source>
 								<source>target/generated-sources/protobuf/java</source>
 								<source>target/generated-sources/protobuf/grpc-java</source>
 							</sources>
