--- a/killrvideo-commons/pom.xml
+++ b/killrvideo-commons/pom.xml
@@ -49,6 +49,10 @@
 			<groupId>org.apache.tinkerpop</groupId>
 			<artifactId>gremlin-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.tinkerpop</groupId>
+			<artifactId>tinkergraph-gremlin</artifactId>
+		</dependency>
 
 		<!--  Service Discovery -->
 		<dependency>
