--- a/pom.xml
+++ b/pom.xml
@@ -43,8 +43,8 @@
 	<properties>
 		
 		<!-- DataStax Java-Driver -->
-		<datastax-driver.version>4.9.0</datastax-driver.version>
-		<gremlin.version>3.4.10</gremlin.version>
+		<datastax-driver.version>4.10.0</datastax-driver.version>
+		<tinkerpop.version>3.4.10</tinkerpop.version>
 
 		<!-- Spring -->
 		<spring.version>5.3.14</spring.version>
@@ -125,7 +125,12 @@
 			<dependency>
 				<groupId>org.apache.tinkerpop</groupId>
 				<artifactId>gremlin-core</artifactId>
-				<version>${gremlin.version}</version>
+				<version>${tinkerpop.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.tinkerpop</groupId>
+				<artifactId>tinkergraph-gremlin</artifactId>
+				<version>${tinkerpop.version}</version>
 			</dependency>
 
 	 		<!-- Bean Validation -->
