--- a/pom.xml
+++ b/pom.xml
@@ -236,48 +236,57 @@
 				<groupId>org.cassandraunit</groupId>
 				<artifactId>cassandra-unit</artifactId>
 				<version>${cassandra-unit.version}</version>
+				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.cassandra</groupId>
 				<artifactId>cassandra-all</artifactId>
 				<version>${cassandra-all.version}</version>
+				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.cassandraunit</groupId>
 				<artifactId>cassandra-unit-spring</artifactId>
 				<version>${cassandra-unit.version}</version>
+				<scope>test</scope>
 			</dependency>
 			<!-- Junit 5 -->
 			<dependency>
 				<groupId>org.junit.platform</groupId>
 				<artifactId>junit-platform-launcher</artifactId>
 				<version>${junit-platform.version}</version>
+				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.junit.platform</groupId>
 				<artifactId>junit-platform-runner</artifactId>
 				<version>${junit-platform.version}</version>
+				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.junit.platform</groupId>
 				<artifactId>junit-platform-console-standalone</artifactId>
 				<version>${junit-platform.version}</version>
+				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.junit.jupiter</groupId>
 				<artifactId>junit-jupiter-engine</artifactId>
 				<version>${junit-jupiter.version}</version>
+				<scope>test</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.junit.jupiter</groupId>
 				<artifactId>junit-jupiter-params</artifactId>
 				<version>${junit-jupiter.version}</version>
+				<scope>test</scope>
 			</dependency>
 			<!-- Cuncumber -->
 			<dependency>
             	<groupId>info.cukes</groupId>
             	<artifactId>cucumber-java</artifactId>
 	            <version>${cucumber.version}</version>
+				<scope>test</scope>
 	        </dependency>
 	        <dependency>
 	            <groupId>info.cukes</groupId>
@@ -289,11 +298,13 @@
 	            <groupId>info.cukes</groupId>
 	            <artifactId>cucumber-junit</artifactId>
 	            <version>${cucumber.version}</version>
+				<scope>test</scope>
 	        </dependency>
         	<dependency>
             	<groupId>org.assertj</groupId>
             	<artifactId>assertj-core</artifactId>
             	<version>${assertj-core.version}</version>
+				<scope>test</scope>
         	</dependency>
 
 			<!-- Extra Libs -->
