--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
         
 		<!-- GRPC -->
 		<grpc.version>1.10.0</grpc.version>
-		<protobuf.version>3.5.1-1</protobuf.version>
+		<protobuf.version>3.19.1</protobuf.version>
 		<protobuf.java.version>3.19.1</protobuf.java.version>
 		<protoc-gen-grpc.version>1.11.0</protoc-gen-grpc.version>
 		
