--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
 		<logback.version>1.2.10</logback.version>
 		<etcd4j.version>1.2</etcd4j.version>
 		<retry4j.version>0.14.0</retry4j.version>
-		<guava.version>19.0</guava.version>
+		<guava.version>31.0.1-jre</guava.version>
 		<ff4j.version>1.8.12</ff4j.version>
 		<netty.version>4.1.72.Final</netty.version>
         
