--- a/killrvideo-commons/pom.xml
+++ b/killrvideo-commons/pom.xml
@@ -54,6 +54,11 @@
 			<artifactId>tinkergraph-gremlin</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
+		</dependency>
 		<!--  Service Discovery -->
 		<dependency>
 			<groupId>com.xqbase</groupId>
@@ -115,7 +120,11 @@
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+
 		<!-- Junit5 + Spring -->
 		<dependency>
 			<groupId>org.junit.platform</groupId>
@@ -148,8 +157,33 @@
     <!-- ~ BUILD : Generate Common types in PROTO  ~ -->
     <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 	<build>
-		<plugins> 
-			
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>${lombok.version}</version>
+						</path>
+						<path>
+							<groupId>com.datastax.oss</groupId>
+							<artifactId>java-driver-mapper-processor</artifactId>
+							<version>${datastax-driver.version}</version>
+						</path>
+						<dependency>
+							<groupId>org.apache.tinkerpop</groupId>
+							<artifactId>tinkergraph-gremlin</artifactId>
+							<version>${tinkerpop.version}</version>
+						</dependency>
+					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
+
 			<!-- Add GRPC Sources -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
