--- a/killrvideo-services/src/main/resources/application.conf
+++ b/killrvideo-services/src/main/resources/application.conf
@@ -1,6 +1,7 @@
 datastax-java-driver {
   basic.graph.name = killrvideo_video_recommendations
   basic.graph.timeout = 30 seconds
+  basic.load-balancing-policy.local-datacenter = dc1
 
   advanced.request.warn-if-set-keyspace = false
   advanced.graph.sub-protocol = graphson-2.0
