--- a/pom.xml
+++ b/pom.xml
@@ -91,10 +91,11 @@
 		
 		<build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version>
 		<cassandra-maven-plugin.version>3.5</cassandra-maven-plugin.version>
-		<maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
+		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 		<maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
 		<maven-os-plugin.version>1.5.0.Final</maven-os-plugin.version>
 		<protobuf-maven-plugin.version>0.5.0</protobuf-maven-plugin.version>
+		<lombok.version>1.18.20</lombok.version>
 	</properties>
 
 	<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
@@ -211,6 +212,13 @@
 				<version>${spring-boot.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>${lombok.version}</version>
+				<scope>provided</scope>
 			</dependency>
 
 			<!-- Logging -->
