--- a/killrvideo-commons/pom.xml
+++ b/killrvideo-commons/pom.xml
@@ -85,6 +85,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.glassfish</groupId>
