--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,7 @@
 	            <groupId>org.hibernate</groupId>
 	            <artifactId>hibernate-validator</artifactId>
 	            <version>${validator.version}</version>
+				<scope>runtime</scope>
 	        </dependency>
             <dependency>
 	   		   <groupId>org.glassfish</groupId>
