--- a/scripts/docker-compose-backend-external.yaml
+++ b/scripts/docker-compose-backend-external.yaml
@@ -46,17 +46,17 @@ services:
       - /home/jeffersons/Tutorial/github.com/KillrVideo/dse/var/lib/cassandra:/var/lib/cassandra
 
   # One-Time Bootstrap Container, configures DSE to have required keyspaces etc.
-  dse-config:
-    image: killrvideo/killrvideo-dse-config:3.0.0
-    depends_on:
-      - dse # Needs DSE to be running
+  #dse-config:
+  #  image: killrvideo/killrvideo-dse-config:3.0.0
+  #  depends_on:
+  #    - dse # Needs DSE to be running
 
   # Sample Data Generator, imitates behaviour of users on the killrVideo website. 
   # Adds comments and rates videos, upload new videos and so on.
-  generator:
-    image: killrvideo/killrvideo-generator:3.0.1
-    environment:
-      KILLRVIDEO_LOGGING_LEVEL: debug # More logging
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-      - "backend:$KILLRVIDEO_BACKEND"
+  #generator:
+  #  image: killrvideo/killrvideo-generator:3.0.1
+  #  environment:
+  #    KILLRVIDEO_LOGGING_LEVEL: debug # More logging
+  #  extra_hosts:
+  #    - "host.docker.internal:host-gateway"
+  #    - "backend:$KILLRVIDEO_BACKEND"
