Use java inject.

--- a/killrvideo-commons/pom.xml
+++ b/killrvideo-commons/pom.xml
@@ -95,6 +95,10 @@
 			<groupId>javax.el</groupId>
 			<artifactId>javax.el-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+		</dependency>
 		
 		<!-- Generate Common types -->
 		<dependency>
