--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
 		<maven-os-plugin.version>1.5.0.Final</maven-os-plugin.version>
 		<protobuf-maven-plugin.version>0.5.0</protobuf-maven-plugin.version>
 		<lombok.version>1.18.20</lombok.version>
+		<javax.inject.version>1</javax.inject.version>
 	</properties>
 
 	<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
@@ -153,6 +154,11 @@
 	            <artifactId>javax.el-api</artifactId>
 	            <version>${javax.el.api.version}</version>
 	        </dependency>
+			<dependency>
+				<groupId>javax.inject</groupId>
+				<artifactId>javax.inject</artifactId>
+				<version>${javax.inject.version}</version>
+			</dependency>
 
 			<!-- GRPC -->
 			<dependency>
