--- a/killrvideo-service-search/pom.xml
+++ b/killrvideo-service-search/pom.xml
@@ -29,6 +29,16 @@
 			<artifactId>killrvideo-commons</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
