Add test cases.

--- a/killrvideo-service-statistics/pom.xml
+++ b/killrvideo-service-statistics/pom.xml
@@ -29,6 +29,13 @@
 			<artifactId>killrvideo-commons</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.datastax</groupId>
+			<artifactId>killrvideo-test-utils</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
