--- a/killrvideo-service-videocatalog/pom.xml
+++ b/killrvideo-service-videocatalog/pom.xml
@@ -30,6 +30,12 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.datastax</groupId>
+			<artifactId>killrvideo-test-utils</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
         </dependency>
