--- a/killrvideo-service-suggestedvideo/pom.xml
+++ b/killrvideo-service-suggestedvideo/pom.xml
@@ -7,9 +7,9 @@
     <!-- ~    MVN Coordonates       ~ -->
     <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>killrvideo-service-sugestedvideo</artifactId>
-    <name> + killrvideo-service-sugestedvideo</name>
-    <description>Service Sugested Videos</description>
+    <artifactId>killrvideo-service-suggestedvideo</artifactId>
+    <name> + killrvideo-service-suggestedvideo</name>
+    <description>Service Suggested Videos</description>
     
     <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 	<!-- ~ Parent                   ~ -->
