--- a/scripts/linux/docker-compose-backend-external.yaml
+++ b/scripts/linux/docker-compose-backend-external.yaml
@@ -61,3 +61,11 @@ services:
   #  extra_hosts:
   #    - "host.docker.internal:host-gateway"
   #    - "backend:$KILLRVIDEO_BACKEND"
+
+  redis:
+    image: redis:latest
+    ports:
+      - 6379:6379
+    volumes:
+      - ./config/redis.conf:/redis.conf
+    command: [ "redis-server", "/redis.conf" ]
