--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -2,14 +2,20 @@ version: '3'
 services:
   backend:
     image: killrvideo-java-local
+    ports:
+      - "50101:50101"
     depends_on:
       - dse
+      - redis
     environment:
       KILLRVIDEO_LOGGING_LEVEL: debug
       KILLRVIDEO_DSE_CONTACT_POINTS: dse
+      KILLRVIDEO_REDIS_CONTACT_POINTS: redis
   
   dse: 
-    image: datastax/dse-server:6.7.4
+    image: datastax/dse-server:6.8.18-1
+    ports:
+      - "9042:9042"
     command: [ -s -g ]
     environment:
       DS_LICENSE: accept
@@ -17,8 +23,18 @@ services:
       - IPC_LOCK
     ulimits:
       memlock: -1
+    volumes:
+      - /home/jeffersons/Tutorial/github.com/KillrVideo/dse2/var/lib/cassandra:/var/lib/cassandra
 
   dse-config: 
     image: killrvideo/killrvideo-dse-config:3.0.0
     depends_on:
       - dse
+
+  redis:
+    image: redis:latest
+    ports:
+      - 6379:6379
+    volumes:
+      - ./config/redis.conf:/redis.conf
+    command: [ "redis-server", "/redis.conf" ]
