--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,31 +21,35 @@ services:
       - backend # Needs Backend to be running
     environment:
       KILLRVIDEO_LOGGING_LEVEL: debug # More logging
+    labels:
+      kompose.service.type: nodeport # Adds a label for Kompose to expose service externally
 
   # Service implementation - use docker-compose-backend-external.yaml if running services in IDE
   backend: # KillrVideo Backend 
-    image: killrvideo/killrvideo-java
+    image: killrvideo-java-local:latest
     ports:
       - "50101:50101" # Exposes port to be available. Kompose tool needs that to create a k8s service and make backend available for other services.
     depends_on:
       - dse  # Needs DSE to be running
+      - redis
     environment:
       KILLRVIDEO_LOGGING_LEVEL: debug # More logging
       KILLRVIDEO_DSE_CONTACT_POINTS: dse
+      KILLRVIDEO_REDIS_CONTACT_POINTS: redis
   
   # Datastax Studio provides convenient web interface to work directly with DataStax Enterprise
-  studio:  
-    image: datastax/dse-studio:6.7.0
-    ports:
-      - "9091:9091" # Exposes port to be available externally
-    depends_on:
-      - dse # Needs DSE to be running
-    environment:
-      DS_LICENSE: accept
+  #studio:
+  #  image: datastax/dse-studio:6.7.0
+  #  ports:
+  #    - "9091:9091" # Exposes port to be available externally
+  #  depends_on:
+  #    - dse # Needs DSE to be running
+  #  environment:
+  #    DS_LICENSE: accept
 
   # DataStax Enterprise Database
   dse: 
-    image: datastax/dse-server:6.7.4
+    image: datastax/dse-server:6.8.18-1
     command: [ -s -g ] # Run with Search and Graph capabilities enabled
     ports: # Exposes ports to be available.
       - "9042:9042" # Exposes DSE port
@@ -60,16 +64,24 @@ services:
 
   # One-Time Bootstrap Container, configures DSE to have required keyspaces etc.
   dse-config: 
-    image: killrvideo/killrvideo-dse-config:3.0.0
+    image: killrvideo/killrvideo-dse-config:3
     depends_on:
       - dse # Needs DSE to be running
+    restart: on-failure # Kompose needs that to create dse-config as a pod, not a deployment. DSE-Config deployment is not needed as we run it only once.
 
   # Sample Data Generator, imitates behaviour of users on the killrVideo website. 
   # Adds comments and rates videos, upload new videos and so on.
-  generator: 
-    image: killrvideo/killrvideo-generator:3.0.2
-    depends_on:
-      - backend # Needs Backend to be running
-    environment:
-      KILLRVIDEO_LOGGING_LEVEL: debug # More logging
+  #generator:
+  #  image: killrvideo/killrvideo-generator:3.0.2
+  #  depends_on:
+  #    - backend # Needs Backend to be running
+  #  environment:
+  #    KILLRVIDEO_LOGGING_LEVEL: debug # More logging
 
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./config/redis.conf:/redis.conf
+    command: [ "redis-server", "/redis.conf" ]
