--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,6 +82,7 @@ services:
     image: redis:latest
     ports:
       - "6379:6379"
-    volumes:
-      - ./config/redis.conf:/redis.conf
-    command: [ "redis-server", "/redis.conf" ]
+    #volumes:
+    #  - ./config/redis.conf:/redis.conf
+    #command: [ "redis-server", "/redis.conf" ]
+    command: [ "redis-server" ]
