--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
 
   # Service implementation - use docker-compose-backend-external.yaml if running services in IDE
   backend: # KillrVideo Backend 
-    image: killrvideo-java-local:latest
+    image: killrvideo-java-local:3.0.0
     ports:
       - "50101:50101" # Exposes port to be available. Kompose tool needs that to create a k8s service and make backend available for other services.
     depends_on:
