--- a/scripts/linux/docker-compose-backend-external.yaml
+++ b/scripts/linux/docker-compose-backend-external.yaml
@@ -65,10 +65,11 @@ services:
   redis:
     image: redis:latest
     ports:
-      - 6379:6379
-    volumes:
-      - ./config/redis.conf:/redis.conf
-    command: [ "redis-server", "/redis.conf" ]
+      - "6379:6379"
+    #volumes:
+    #  - ./config/redis.conf:/redis.conf
+    #command: [ "redis-server", "/redis.conf" ]
+    command: [ "redis-server" ]
 
   # Ensure consistency in Kafka World
   zookeeper:
