--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -16,15 +16,15 @@ build:
 deploy:
   kubectl:
     manifests:
-    - k8s/backend-deployment.yaml
-    - k8s/backend-service.yaml
-    - k8s/dse-config-pod.yaml
-    - k8s/dse-deployment.yaml
-    - k8s/dse-service.yaml
-    - k8s/redis-deployment.yaml
-    - k8s/redis-service.yaml
-    - k8s/web-deployment.yaml
-    - k8s/web-service.yaml
+    - k8s/base/backend-deployment.yaml
+    - k8s/base/backend-service.yaml
+    - k8s/base/dse-config-pod.yaml
+    - k8s/base/dse-deployment.yaml
+    - k8s/base/dse-service.yaml
+    - k8s/base/redis-deployment.yaml
+    - k8s/base/redis-service.yaml
+    - k8s/base/web-deployment.yaml
+    - k8s/base/web-service.yaml
 
 portForward:
   - resourceType: service
