--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -13,16 +13,18 @@ build:
   insecureRegistries:
     - registry.local:5000
 
-deploy:
-  kubectl:
-    manifests:
-    - k8s/base/dse-deployment.yaml
-    - k8s/base/dse-service.yaml
-    - k8s/base/redis-deployment.yaml
-    - k8s/base/redis-service.yaml
-    - k8s/base/dse-config-pod.yaml
-    - k8s/base/backend-deployment.yaml
-    - k8s/base/backend-service.yaml
+profiles:
+  - name: local
+    deploy:
+      kubectl:
+        manifests:
+        - k8s/base/dse-deployment.yaml
+        - k8s/base/dse-service.yaml
+        - k8s/base/redis-deployment.yaml
+        - k8s/base/redis-service.yaml
+        - k8s/base/dse-config-pod.yaml
+        - k8s/base/backend-deployment.yaml
+        - k8s/base/backend-service.yaml
 
 portForward:
   - resourceType: service
