--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -16,20 +16,12 @@ build:
 profiles:
   - name: local
     deploy:
-      kustomize:
-        paths:
-          - k8s/overlays/local
-      kubeContext: k3d-k3s-local
-
-portForward:
-  - resourceType: service
-    resourceName: backend
-    namespace: default
-    port: 50101
-    localPort: 50101
-
-  - resourceType: service
-    resourceName: dse
-    namespace: default
-    port: 9042
-    localPort: 9042
+      kubectl:
+        manifests:
+        - k8s/base/dse-deployment.yaml
+        - k8s/base/dse-service.yaml
+        - k8s/base/redis-deployment.yaml
+        - k8s/base/redis-service.yaml
+        - k8s/base/dse-config-pod.yaml
+        - k8s/base/backend-deployment.yaml
+        - k8s/base/backend-service.yaml
