--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -16,12 +16,7 @@ build:
 profiles:
   - name: local
     deploy:
-      kubectl:
-        manifests:
-        - k8s/base/dse-deployment.yaml
-        - k8s/base/dse-service.yaml
-        - k8s/base/redis-deployment.yaml
-        - k8s/base/redis-service.yaml
-        - k8s/base/dse-config-pod.yaml
-        - k8s/base/backend-deployment.yaml
-        - k8s/base/backend-service.yaml
+      kustomize:
+        paths:
+          - k8s/overlays/local
+      kubeContext: k3d-k3s-local
