--- a/k8s/base/backend-service.yaml
+++ b/k8s/base/backend-service.yaml
@@ -2,7 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: kompose convert -f ../docker-compose.yml
+    kompose.cmd: kompose convert -f ../../docker-compose.yml
+    kompose.service.type: nodeport
     kompose.version: 1.26.1 (a9d05d509)
   creationTimestamp: null
   labels:
@@ -15,5 +16,6 @@ spec:
       targetPort: 50101
   selector:
     io.kompose.service: backend
+  type: NodePort
 status:
   loadBalancer: {}
