--- a/k8s/infra/dse-service.yaml
+++ b/k8s/infra/dse-service.yaml
@@ -2,7 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: kompose convert -f ../docker-compose.yml
+    kompose.cmd: kompose convert -f ../../docker-compose.yml
+    kompose.service.type: nodeport
     kompose.version: 1.26.1 (a9d05d509)
   creationTimestamp: null
   labels:
@@ -13,13 +14,8 @@ spec:
     - name: "9042"
       port: 9042
       targetPort: 9042
-    - name: "8983"
-      port: 8983
-      targetPort: 8983
-    - name: "8182"
-      port: 8182
-      targetPort: 8182
   selector:
     io.kompose.service: dse
+  type: NodePort
 status:
   loadBalancer: {}
